--- a/firstspark/src/main/resources/application.conf
+++ b/firstspark/src/main/resources/application.conf
@@ -3,6 +3,6 @@ moi {
     input = "src/main/resources/Données_cartographie_2021.csv"
    output = "target/test-classes/data/output"
   }
-  //spark.master = "spark://localhost:7077"
-  spark.master = "local[2]"
+  spark.master = "spark://192.168.239.1:7077"
+
 }
